syntax = "proto3";

message Document {
  CstmrCdtTrfInitn CstmrCdtTrfInitn = 1;
}

message CstmrCdtTrfInitn {
  GrpHdr GrpHdr = 1;
  PmtInf PmtInf = 2;
}

message GrpHdr {
  string MsgId = 1;
  string CreDtTm = 2;
  int32 NbOfTxs = 3;
  double CtrlSum = 4;
  InitgPty InitgPty = 5;
}

message InitgPty {
  string Nm = 1;
}

message PmtInf {
  string PmtInfId = 1;
  string PmtMtd = 2;
  int32 NbOfTxs = 3;
  double CtrlSum = 4;
  PmtTpInf PmtTpInf = 5;
  ReqdExctnDt ReqdExctnDt = 6;
  Dbtr Dbtr = 7;
  DbtrAcct DbtrAcct = 8;
  DbtrAgt DbtrAgt = 9;
  CdtTrfTxInf CdtTrfTxInf = 10;
}

message PmtTpInf {
  SvcLvl SvcLvl = 1;
}

message SvcLvl {
  string Cd = 1;
}

message ReqdExctnDt {
  string DtTm = 1;
}

message Dbtr {
  string Nm = 1;
}

message DbtrAcct {
  Id Id = 1;
}

message Id {
  string Iban = 1;
}

message DbtrAgt {
  FinInstnId FinInstnId = 1;
}

message FinInstnId {
  string Bicfi = 1;
}

message CdtTrfTxInf {
  PmtId PmtId = 1;
  Amt Amt = 2;
  CdtrAgt CdtrAgt = 3;
  CdtrAcct CdtrAcct = 4;
}

message PmtId {
  string EndToEndId = 1;
}

message Amt {
  string Ccy = 1;
  double InstdAmt = 2;
}

message CdtrAgt {
  FinInstnId FinInstnId = 1;
}

message CdtrAcct {
  Id Id = 1;
}
